# Generated Meson configuration for sub-module: Core

my_sources += files(
    'AI.m',
    'AIGraphViz.m',
    'CollisionRegion.m',
    'GameController.m',
    'GuiDisplayGen.m',
    'HeadUpDisplay.m',
    'NSDataOOExtensions.m',
    'NSDictionaryOOExtensions.m',
    'NSFileManagerOOExtensions.m',
    'NSMutableDictionaryOOExtensions.m',
    'NSNumberOOExtensions.m',
    'NSObjectOOExtensions.m',
    'NSScannerOOExtensions.m',
    'NSStringOOExtensions.m',
    'NSThreadOOExtensions.m',
    'NSUserDefaults+Override.m',
    'OOALBufferedSound.m',
    'OOALMusic.m',
    'OOALSound.m',
    'OOALSoundChannel.m',
    'OOALSoundDecoder.m',
    'OOALSoundMixer.m',
    'OOALStreamedSound.m',
    'OOAsyncQueue.m',
    'OOAsyncWorkManager.m',
    'OOCPUInfo.m',
    'OOCache.m',
    'OOCacheManager.m',
    'OOCharacter.m',
    'OOCocoa.m',
    'OOCollectionExtractors.m',
    'OOColor.m',
    'OOCommodities.m',
    'OOCommodityMarket.m',
    'OOConstToString.m',
    'OOConvertCubeMapToLatLong.m',
    'OOConvertSystemDescriptions.m',
    'OOCrosshairs.m',
    'OODebugGLDrawing.m',
    'OODeepCopy.m',
    'OODrawable.m',
    'OOEncodingConverter.m',
    'OOEntityFilterPredicate.m',
    'OOEquipmentType.m',
    'OOExcludeObjectEnumerator.m',
    'OOFilteringEnumerator.m',
    'OOGraphicsResetManager.m',
    'OOHPVector.m',
    'OOIsNumberLiteral.m',
    'OOJoystickManager.m',
    'OOJoystickProfile.m',
    'OOLogHeader.m',
    'OOLogOutputHandler.m',
    'OOLogging.m',
    'OOMatrix.m',
    'OOMesh.m',
    'OOMeshToOctreeConverter.m',
    'OOMouseInteractionMode.m',
    'OOMusicController.m',
    'OOOXZManager.m',
    'OOOpenALController.m',
    'OOOpenGL.m',
    'OOOpenGLExtensionManager.m',
    'OOOpenGLMatrixManager.m',
    'OOOpenGLStateManager.m',
    'OOPListParsing.m',
    'OOPlanetData.c',
    'OOPlanetDrawable.m',
    'OOPolygonSprite.m',
    'OOPriorityQueue.m',
    'OOProbabilisticTextureManager.m',
    'OOProbabilitySet.m',
    'OOProfilingStopwatch.m',
    'OOQuaternion.m',
    'OORegExpMatcher.m',
    'OORoleSet.m',
    'OOShipGroup.m',
    'OOShipLibraryDescriptions.m',
    'OOShipRegistry.m',
    'OOSkyDrawable.m',
    'OOSoundSource.m',
    'OOSoundSourcePool.m',
    'OOSpatialReference.m',
    'OOStringExpander.m',
    'OOStringParsing.m',
    'OOSystemDescriptionManager.m',
    'OOTextureScaling.m',
    'OOTextureSprite.m',
    'OOTrumble.m',
    'OOVector.m',
    'OOVoxel.m',
    'OOWeakReference.m',
    'OOWeakSet.m',
    'OOXMLExtensions.m',
    'Octree.m',
    'OldSchoolPropertyListWriting.m',
    'ResourceManager.m',
    'TextureStore.m',
    'Universe.m',
    'legacy_random.c',
)

my_includes += include_directories('.')

# Enter child subdirectories
subdir('Debug')
subdir('Entities')
subdir('Materials')
subdir('MiniZip')
subdir('OXPVerifier')
subdir('Scripting')
subdir('Tables')
