# Generated Meson configuration for sub-module: SDL

my_sources += files(
    'Comparison.m',
    'GameController+SDLFullScreen.m',
    'MyOpenGLView.m',
    'OOSDLJoystickManager.m',
    'main.m',
)

my_includes += include_directories('.')

# Enter child subdirectories
subdir('EXRSnapshotSupport')
subdir('OOResourcesWin')
