# Generated Meson configuration for sub-module: SDL

oolite_sources += files(
    'Comparison.m',
    'GameController+SDLFullScreen.m',
    'MyOpenGLView.m',
    'OOSDLJoystickManager.m',
    'main.m',
)

oolite_includes += include_directories('.')

# Enter child subdirectories
subdir('EXRSnapshotSupport')
subdir('OOResourcesWin')
