# Generated Meson configuration for sub-module: Debug

my_sources += files(
    'OODebugMonitor.m',
    'OODebugStandards.m',
    'OODebugSupport.m',
    'OODebugTCPConsoleClient.m',
    'OOJSConsole.m',
    'OOTCPStreamDecoder.c',
    'OOTCPStreamDecoderAbstractionLayer.m',
)

my_includes += include_directories('.')

