# Generated Meson configuration for sub-module: Debug

oolite_sources += files(
    'OODebugMonitor.m',
    'OODebugStandards.m',
    'OODebugSupport.m',
    'OODebugTCPConsoleClient.m',
    'OOJSConsole.m',
    'OOTCPStreamDecoder.c',
    'OOTCPStreamDecoderAbstractionLayer.m',
)

oolite_includes += include_directories('.')

