# Generated Meson configuration for sub-module: Entities

my_sources += files(
    'DockEntity.m',
    'DustEntity.m',
    'Entity.m',
    'OOBreakPatternEntity.m',
    'OOECMBlastEntity.m',
    'OOEntityWithDrawable.m',
    'OOExhaustPlumeEntity.m',
    'OOExplosionCloudEntity.m',
    'OOFlashEffectEntity.m',
    'OOFlasherEntity.m',
    'OOLaserShotEntity.m',
    'OOLightParticleEntity.m',
    'OOParticleSystem.m',
    'OOPlanetEntity.m',
    'OOPlasmaBurstEntity.m',
    'OOPlasmaShotEntity.m',
    'OOQuiriumCascadeEntity.m',
    'OORingEffectEntity.m',
    'OOSparkEntity.m',
    'OOSunEntity.m',
    'OOVisualEffectEntity.m',
    'OOWaypointEntity.m',
    'PlanetEntity.m',
    'PlayerEntity.m',
    'PlayerEntityContracts.m',
    'PlayerEntityControls.m',
    'PlayerEntityKeyMapper.m',
    'PlayerEntityLegacyScriptEngine.m',
    'PlayerEntityLoadSave.m',
    'PlayerEntityScriptMethods.m',
    'PlayerEntitySound.m',
    'PlayerEntityStickMapper.m',
    'PlayerEntityStickProfile.m',
    'ProxyPlayerEntity.m',
    'ShipEntity.m',
    'ShipEntityAI.m',
    'ShipEntityLoadRestore.m',
    'ShipEntityScriptMethods.m',
    'SkyEntity.m',
    'StationEntity.m',
    'WormholeEntity.m',
)

my_includes += include_directories('.')

