# Generated Meson configuration for sub-module: Materials

my_sources += files(
    'OOBasicMaterial.m',
    'OOCombinedEmissionMapGenerator.m',
    'OOConcreteTexture.m',
    'OODefaultShaderSynthesizer.m',
    'OOMaterial.m',
    'OOMaterialConvenienceCreators.m',
    'OOMaterialSpecifier.m',
    'OOMultiTextureMaterial.m',
    'OONullTexture.m',
    'OOPNGTextureLoader.m',
    'OOPixMap.m',
    'OOPixMapChannelOperations.m',
    'OOPixMapTextureLoader.m',
    'OOPlanetTextureGenerator.m',
    'OOShaderMaterial.m',
    'OOShaderProgram.m',
    'OOShaderUniform.m',
    'OOShaderUniformMethodType.m',
    'OOSingleTextureMaterial.m',
    'OOStandaloneAtmosphereGenerator.m',
    'OOTexture.m',
    'OOTextureGenerator.m',
    'OOTextureLoader.m',
)

my_includes += include_directories('.')

