# Generated Meson configuration for sub-module: OXPVerifier

my_sources += files(
    'OOAIStateMachineVerifierStage.m',
    'OOCheckDemoShipsPListVerifierStage.m',
    'OOCheckEquipmentPListVerifierStage.m',
    'OOCheckJSSyntaxVerifierStage.m',
    'OOCheckPListSyntaxVerifierStage.m',
    'OOCheckRequiresPListVerifierStage.m',
    'OOCheckShipDataPListVerifierStage.m',
    'OOFileScannerVerifierStage.m',
    'OOModelVerifierStage.m',
    'OOOXPVerifier.m',
    'OOOXPVerifierStage.m',
    'OOPListSchemaVerifier.m',
    'OOTextureVerifierStage.m',
)

my_includes += include_directories('.')

