# Generated Meson configuration for sub-module: Scripting

oolite_sources += files(
    'EntityOOJavaScriptExtensions.m',
    'OOConstToJSString.m',
    'OOJSCall.m',
    'OOJSClock.m',
    'OOJSDock.m',
    'OOJSEngineDebuggerHelpers.m',
    'OOJSEngineTimeManagement.m',
    'OOJSEntity.m',
    'OOJSEquipmentInfo.m',
    'OOJSExhaustPlume.m',
    'OOJSFlasher.m',
    'OOJSFont.m',
    'OOJSFrameCallbacks.m',
    'OOJSFunction.m',
    'OOJSGlobal.m',
    'OOJSGuiScreenKeyDefinition.m',
    'OOJSInterfaceDefinition.m',
    'OOJSManifest.m',
    'OOJSMission.m',
    'OOJSMissionVariables.m',
    'OOJSOolite.m',
    'OOJSPlanet.m',
    'OOJSPlayer.m',
    'OOJSPlayerShip.m',
    'OOJSPopulatorDefinition.m',
    'OOJSQuaternion.m',
    'OOJSScript.m',
    'OOJSShip.m',
    'OOJSShipGroup.m',
    'OOJSSound.m',
    'OOJSSoundSource.m',
    'OOJSSpecialFunctions.m',
    'OOJSStation.m',
    'OOJSSun.m',
    'OOJSSystem.m',
    'OOJSSystemInfo.m',
    'OOJSTimer.m',
    'OOJSVector.m',
    'OOJSVisualEffect.m',
    'OOJSWaypoint.m',
    'OOJSWorldScripts.m',
    'OOJSWormhole.m',
    'OOJavaScriptEngine.m',
    'OOLegacyScriptWhitelist.m',
    'OOPListScript.m',
    'OOScript.m',
    'OOScriptTimer.m',
)

oolite_includes += include_directories('.')

